<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/my_posts_title"
        android:textColor="@color/white"
        android:padding="4dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/includeProgress"
        layout="@layout/v_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPosts"
        android:name="com.example.typicodebook.PostsFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="@dimen/rv_padding_start_end"
        android:paddingEnd="@dimen/rv_padding_start_end"
        android:paddingBottom="@dimen/rv_padding_start_end"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/rgFavSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeProgress"
        tools:context=".fragment.PostsFragment"
        tools:listitem="@layout/f_posts" />

    <RadioGroup
        android:id="@+id/rgFavSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/radio_margin"
        android:layout_marginBottom="@dimen/radio_margin"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/radio_margin"
            android:layout_marginEnd="@dimen/radio_margin"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/radio_text" />

        <RadioButton
            android:id="@+id/rbFav"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/fav"
            android:textColor="@color/radio_text" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
